--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Stunning NFT collection of Ukraine motives whose main goal is to help the people of Ukraine by donating money from Minted NFTs."
+    />
     <title>BringTheLight 💡</title>
   </head>
   <body>
