Added new features

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Stunning NFT collection of Ukraine motives whose main goal is to help the people of Ukraine by donating money from Minted NFTs."
     />
-    <title>BringTheLight 💡</title>
+    <title>BringTheLight</title>
   </head>
   <body>
     <div id="root"></div>
